# virsient_challenge

./: CMakeLists.txt  ReadMe.md  conanfile.txt
src/: client.c  client.h  client_main.c  crossplatform.h  file_io.c  file_io.h  linked_list.c  linked_list.h  server.c  server.h  server_main.c
tests/: CMakeLists.txt  client_test.cpp
